Add C# implementation of Game of Life

--- a/src/Life.Api/appsettings.json
+++ b/src/Life.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=./Data/Database/Game.db"
+  },
+  "GameSettings": {
+    "MaxBoardSize": 100,
+    "MaxAttempts": 100
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
