--- a/src/Life.Api/Life.Api.csproj
+++ b/src/Life.Api/Life.Api.csproj
@@ -6,4 +6,24 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.20" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Life.Domain/Life.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Life.Api" />
+    <Using Include="Life.Api.Data" />
+    <Using Include="Life.Domain" />
+  </ItemGroup>
+
 </Project>
