--- a/src/Life.Api/Properties/launchSettings.json
+++ b/src/Life.Api/Properties/launchSettings.json
@@ -1,19 +1,10 @@
 ﻿{
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5015",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7236;http://localhost:5015",
+      "applicationUrl": "https://localhost:5015/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
