Improve code documentation

--- a/src/Life.Api/appsettings.json
+++ b/src/Life.Api/appsettings.json
@@ -4,7 +4,7 @@
   },
   "GameSettings": {
     "MaxBoardSize": 100,
-    "MaxAttempts": 100
+    "MaxNumberOfAttempts": 100
   },
   "Logging": {
     "LogLevel": {
