Fix database connection string

--- a/src/Life.Api/appsettings.json
+++ b/src/Life.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./Data/Database/Game.db"
+    "DefaultConnection": "Data Source=.db/GameOfLife.db"
   },
   "GameSettings": {
     "MaxBoardSize": 100,
