Add integration tests to Game Api

--- a/src/Life.Api/Life.Api.csproj
+++ b/src/Life.Api/Life.Api.csproj
@@ -16,4 +16,8 @@
     <Using Include="Life.Api.Domain" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Life.IntegrationTests" />
+  </ItemGroup>
+
 </Project>
