--- a/src/Life.Api/Life.Api.csproj
+++ b/src/Life.Api/Life.Api.csproj
@@ -14,6 +14,7 @@
     <Using Include="Life.Api" />
     <Using Include="Life.Api.Data" />
     <Using Include="Life.Api.Domain" />
+    <Using Include="Life.Api.Endpoints" />
     <Using Include="Life.Api.Extensions" />
   </ItemGroup>
 
