--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 # Version: 1.0.0 (Using https://semver.org/)
-# Updated: 26-09-2022
+# Updated: 22-07-2025
 # See http://EditorConfig.org for more information about .editorconfig files.
 # See https://docs.microsoft.com/en-us/dotnet/fundamentals/code-analysis/code-style-rule-options for code style rule options.
 
@@ -9,7 +9,9 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
+guidelines = 140
+max_line_length = 140
 trim_trailing_whitespace = true
 
 [*.cs]
@@ -56,9 +58,17 @@ csharp_space_between_method_declaration_parameter_list_parentheses = false
 csharp_space_between_parentheses = false
 csharp_space_between_square_brackets = false
 
+# Code-block preferences
+csharp_prefer_braces = true
+csharp_prefer_simple_using_statement = true
+csharp_style_namespace_declarations = file_scoped
+csharp_style_prefer_method_group_conversion = true
+csharp_style_prefer_primary_constructors = false
+csharp_style_prefer_top_level_statements = true
+
 # Sort using and Import directives with System.* appearing first
 dotnet_sort_system_directives_first = true
-csharp_using_directive_placement = inside_namespace:none
+csharp_using_directive_placement = outside_namespace:none
 
 # Avoid this. unless absolutely necessary
 dotnet_style_qualification_for_field = false:suggestion
@@ -78,35 +88,29 @@ csharp_style_var_elsewhere = false:none
 # Naming Style
 # Name all constant fields using PascalCase
 # https://docs.microsoft.com/dotnet/standard/design-guidelines/field
-dotnet_naming_rule.constants_should_be_pascal_case.style = constant_style
-dotnet_naming_rule.constants_should_be_pascal_case.severity = suggestion
-dotnet_naming_rule.constants_should_be_pascal_case.symbols = constants
-
-dotnet_naming_symbols.constants.applicable_kinds = field, local
-dotnet_naming_symbols.constants.required_modifiers = const
-
-dotnet_naming_style.constant_style.capitalization = pascal_case
-
-# All public/internal/protected_internal/protected/private static readonly fields must be PascalCase
-# https://docs.microsoft.com/dotnet/standard/design-guidelines/field
-dotnet_naming_rule.public_protected_static_readonly_fields_must_be_pascal_case_rule.style = pascal_case_style
-dotnet_naming_rule.public_protected_static_readonly_fields_must_be_pascal_case_rule.severity = warning
-dotnet_naming_rule.public_protected_static_readonly_fields_must_be_pascal_case_rule.symbols = static_readonly_fields
-
-dotnet_naming_symbols.static_readonly_fields.applicable_accessibilities = public, protected, protected_internal, internal, private
-dotnet_naming_symbols.static_readonly_fields.applicable_kinds = field
-dotnet_naming_symbols.static_readonly_fields.required_modifiers = static, readonly
-
+dotnet_naming_rule.constant_fields_should_be_pascal_case.severity = warning
+dotnet_naming_rule.constant_fields_should_be_pascal_case.symbols  = constant_fields
+dotnet_naming_rule.constant_fields_should_be_pascal_case.style    = pascal_case_style
+dotnet_naming_symbols.constant_fields.applicable_kinds   = field
+dotnet_naming_symbols.constant_fields.required_modifiers = const
 dotnet_naming_style.pascal_case_style.capitalization = pascal_case
 
-# Internal and private fields should be _camelCase
-dotnet_naming_rule.camel_case_for_private_internal_fields.style = camel_case_underscore_style
+# static fields should have s_ prefix
+dotnet_naming_rule.static_fields_should_have_prefix.severity = warning
+dotnet_naming_rule.static_fields_should_have_prefix.symbols  = static_fields
+dotnet_naming_rule.static_fields_should_have_prefix.style    = static_prefix_style
+dotnet_naming_symbols.static_fields.applicable_kinds   = field
+dotnet_naming_symbols.static_fields.required_modifiers = static
+dotnet_naming_symbols.static_fields.applicable_accessibilities = private, internal, private_protected
+dotnet_naming_style.static_prefix_style.required_prefix = _
+dotnet_naming_style.static_prefix_style.capitalization = camel_case
+
+# internal and private fields should be _camelCase
 dotnet_naming_rule.camel_case_for_private_internal_fields.severity = warning
 dotnet_naming_rule.camel_case_for_private_internal_fields.symbols  = private_internal_fields
-
-dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = private, internal
+dotnet_naming_rule.camel_case_for_private_internal_fields.style    = camel_case_underscore_style
 dotnet_naming_symbols.private_internal_fields.applicable_kinds = field
-
+dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = private, internal
 dotnet_naming_style.camel_case_underscore_style.required_prefix = _
 dotnet_naming_style.camel_case_underscore_style.capitalization = camel_case
 
@@ -167,29 +171,27 @@ csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
 csharp_style_inlined_variable_declaration = true:suggestion
 
 # Null checking preferences
-csharp_style_throw_expression = true:suggestion
+csharp_style_throw_expression = false:suggestion
 csharp_style_conditional_delegate_call = true:suggestion
 
 # Other features
 csharp_style_prefer_index_operator = false:none
 csharp_style_prefer_range_operator = false:none
-csharp_style_pattern_local_over_anonymous_function = false:none
 
-# TODO: Move those rules to its own global AnalyzerConfig files.
-# https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/configuration-files
 # Enable a subset of code-style analysis on build
 # https://docs.microsoft.com/en-us/dotnet/fundamentals/code-analysis/overview
 dotnet_diagnostic.CA1018.severity = warning     # CA1018: Mark attributes with AttributeUsageAttribute.
-dotnet_diagnostic.CA1047.severity = warning     # CA1047: Do not declare protected member in sealed type.
 dotnet_diagnostic.CA1305.severity = suggestion  # CA1305: Specify IFormatProvider.
 dotnet_diagnostic.CA1507.severity = warning     # CA1507: Use nameof to express symbol names.
+dotnet_diagnostic.CA1510.severity = warning     # CA1510: Use ArgumentNullException throw helper
+dotnet_diagnostic.CA1511.severity = warning     # CA1511: Use ArgumentException throw helper
+dotnet_diagnostic.CA1512.severity = warning     # CA1512: Use ArgumentOutOfRangeException throw helper
+dotnet_diagnostic.CA1513.severity = warning     # CA1513: Use ObjectDisposedException throw helper
 dotnet_diagnostic.CA1725.severity = suggestion  # CA1725: Parameter names should match base declaration.
 dotnet_diagnostic.CA1802.severity = warning     # CA1802: Use literals where appropriate.
 dotnet_diagnostic.CA1805.severity = warning     # CA1805: Do not initialize unnecessarily.
 dotnet_diagnostic.CA1810.severity = suggestion  # CA1810: Do not initialize unnecessarily.
-dotnet_diagnostic.CA1821.severity = warning     # CA1821: Remove empty Finalizers.
 dotnet_diagnostic.CA1822.severity = suggestion  # CA1822: Make member static.
-dotnet_diagnostic.CA1823.severity = warning     # CA1823: Avoid unused private fields.
 dotnet_diagnostic.CA1825.severity = warning     # CA1825: Avoid zero-length array allocations.
 dotnet_diagnostic.CA1826.severity = warning     # CA1826: Do not use Enumerable methods on indexable collections. Instead use the collection directly.
 dotnet_diagnostic.CA1827.severity = warning     # CA1827: Do not use Count() or LongCount() when Any() can be used
@@ -207,28 +209,16 @@ dotnet_diagnostic.CA1838.severity = warning     # CA1838: Avoid 'StringBuilder' 
 dotnet_diagnostic.CA1839.severity = warning     # CA1839: Use 'Environment.ProcessPath'
 dotnet_diagnostic.CA1840.severity = warning     # CA1840: Use 'Environment.CurrentManagedThreadId'
 dotnet_diagnostic.CA1841.severity = warning     # CA1841: Prefer Dictionary.Contains methods
-dotnet_diagnostic.CA1842.severity = warning     # CA1842: Do not use 'WhenAll' with a single task
-dotnet_diagnostic.CA1843.severity = warning     # CA1843: Do not use 'WaitAll' with a single task
 dotnet_diagnostic.CA1845.severity = warning     # CA1845: Use span-based 'string.Concat'
 dotnet_diagnostic.CA1846.severity = warning     # CA1846: Prefer AsSpan over Substring
-dotnet_diagnostic.CA2008.severity = warning     # CA2008: Do not create tasks without passing a TaskScheduler
-dotnet_diagnostic.CA2009.severity = warning     # CA2009: Do not call ToImmutableCollection on an ImmutableCollection value
-dotnet_diagnostic.CA2011.severity = warning     # CA2011: Avoid infinite recursion
-dotnet_diagnostic.CA2012.severity = warning     # CA2012: Use ValueTask correctly
-dotnet_diagnostic.CA2013.severity = warning     # CA2013: Do not use ReferenceEquals with value types
-dotnet_diagnostic.CA2014.severity = warning     # CA2014: Do not use stackalloc in loops.
-dotnet_diagnostic.CA2016.severity = warning     # CA2016: Forward the 'CancellationToken' parameter to methods that take one
-dotnet_diagnostic.CA2200.severity = warning     # CA2200: Rethrow to preserve stack details
-dotnet_diagnostic.CA2208.severity = warning     # CA2208: Instantiate argument exceptions correctly
+dotnet_diagnostic.IDE0005.severity = warning    # IDE0005: Using directive is unnecessary
 dotnet_diagnostic.IDE0020.severity = warning    # IDE0020: Use pattern matching to avoid is check followed by a cast (with variable)
-dotnet_diagnostic.IDE0029.severity = warning    # IDE0029: Use coalesce expression
-dotnet_diagnostic.IDE0031.severity = warning    # IDE0031: Use null propagation
 dotnet_diagnostic.IDE0035.severity = warning    # IDE0035: Remove unreachable code
-dotnet_diagnostic.IDE0036.severity = warning    # IDE0036: Order modifiers
 dotnet_diagnostic.IDE0043.severity = warning    # IDE0043: Format string contains invalid placeholder
-dotnet_diagnostic.IDE0044.severity = warning    # IDE0044: Make field readonly
-dotnet_diagnostic.IDE0200.severity = warning    # IDE0200: Remove unnecessary lambda expression.
-dotnet_diagnostic.IDE0210.severity = suggestion # IDE0210: Use top-level statements
+
+# Xml config files
+[*.{csproj,nuspec,props,resx,ruleset,targets,stylecop,xml}]
+indent_size = 2
 
 # Json
 [*.json]
@@ -236,7 +226,6 @@ indent_size = 2
 
 # Markdown
 [*.md]
-max_line_length = off
 trim_trailing_whitespace = false
 
 # Scripts
