--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,11 +8,10 @@
       <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
       <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8" />
       <PackageVersion Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+    </ItemGroup>
 
-      <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <ItemGroup Condition="'$(IsTestProject)' == 'true'">
       <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.8" />
-      <PackageVersion Include="coverlet.collector" Version="6.0.4" />
-      <PackageVersion Include="xunit" Version="2.9.3" />
-      <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3" />
+      <PackageVersion Include="xunit.v3" Version="3.0.0" />
     </ItemGroup>
   </Project>
