--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,17 +1,16 @@
-  <Project>
-    <PropertyGroup>
-      <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
-      <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
-      <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8" />
-      <PackageVersion Include="Swashbuckle.AspNetCore" Version="9.0.3" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(IsTestProject)' == 'true'">
-      <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.8" />
-      <PackageVersion Include="xunit.v3" Version="3.0.0" />
-    </ItemGroup>
-  </Project>
+<Project>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(IsTestProject)' == 'true'">
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.8" />
+    <PackageVersion Include="xunit.v3" Version="3.0.0" />
+  </ItemGroup>
+</Project>
